syntax = "proto3";

import "protos/DADINTstruct.proto";

message ClientTransactionRequest {
  string clientId = 1;
  repeated string readOperations = 2;
  repeated DADInt writeOperations = 3;
}

message ClientTransactionReply { repeated DADInt objValues = 1; }

message ReceiveTransactionReply {}

message ClientStatusRequest {}

message ClientStatusReply {}

service ClientServerService {
  rpc SubmitTransaction(ClientTransactionRequest)
      returns (ClientTransactionReply);
  rpc ReceiveTransaction(ClientTransactionReply)
      returns (ReceiveTransactionReply);
  rpc Status(ClientStatusRequest) returns (ClientStatusReply);
}
